--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -35,9 +35,12 @@ p {
   max-width: 39rem;
   padding: 0.8rem 0;
   font-size: 1rem;
+  line-height: 1.75;
 }
 
 p:last-child {padding: 0.8rem 0 0;}
+
+p > cite {font-style: normal;}
 
 strong, em, b {
   font-style: normal;
@@ -54,8 +57,13 @@ h1.center, h2.center, h3.center, p.center, strong.center, em.center, small.cente
 h1.right, h2.right, h3.right, p.right, strong.right, em.right, small.right {text-align: right;}
 
 @media (min-width: 48rem) {
-h1.title {font-size: 4.209rem;}
-h1.title + p {font-size: 1.5rem;}}
+  h1.title {font-size: 4.209rem;}
+  h1.title + p {
+    max-width: 48rem;
+    font-size: 1.5rem;
+  }
+  p > cite {font-size: 0.8rem;}
+}
 
 
 // LISTS
@@ -83,13 +91,13 @@ ul li:last-child, ol li:last-child {padding: 0 0 0 0.25rem;}
 
 
 // TEXT LINKS
-p a, small a, li a {font-weight: 600;}
+p a, small a, li a {font-weight: 700;}
 
 
 // FIGURE TYPOGRAPHY
 figcaption {
   font-size: 0.64rem;
-  font-weight: 600;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
