Added rule to top of footer
Also started working on typography page

--- a/css/master.css
+++ b/css/master.css
@@ -418,6 +418,14 @@ footer {
       font-size: 0.64rem;
       text-align: center; }
 
+footer:before {
+  display: block;
+  width: calc(100% - 2rem);
+  height: 1px;
+  margin: 1rem auto;
+  background-color: #5b5e6b;
+  content: ""; }
+
 @media (min-width: 48rem) {
   footer nav ul li {
     font-size: 0.8rem;
