--- a/css/_organisms/_footers.scss
+++ b/css/_organisms/_footers.scss
@@ -51,6 +51,15 @@ footer {
   }
 }
 
+footer:before {
+  display: block;
+  width: calc(100% - 2rem);
+  height: 1px;
+  margin: 1rem auto;
+  background-color: $dk-gray;
+  content: "";
+}
+
 @media (min-width: 48rem) {
   footer nav ul li {
     font-size: 0.8rem;
