--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -5,7 +5,7 @@
   Body copy is set to a 1.25 major third type scale
 */
 
-h1, h2, h3, p {
+h1, h2, h3, h4, p {
   display: block;
   width: 100%;
   margin: 0;
@@ -44,7 +44,7 @@ p > cite {font-style: normal;}
 
 strong, em, b {
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 small {font-size: 0.8rem;}
@@ -74,7 +74,7 @@ ul, ol {
   margin: 0 auto;
   padding: 0.8rem 0 0.8rem 1.5rem;
   font-size: 1rem;
-  line-height: 1.25;
+  line-height: 1.75;
   text-align: left;
 }
 
@@ -84,6 +84,7 @@ ol {list-style-type: decimal;}
 
 ul li, ol li {
   width: 100%;
+  max-width: 39rem;
   padding: 0 0 0.8rem 0.25rem;
 }
 
@@ -103,7 +104,7 @@ figcaption {
 
 pre {line-height: 1.2;}
 
-p > code {
+p > code, li > code {
   font-size: 1rem;
   white-space: nowrap;
 }
