--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -85,7 +85,7 @@ ol {list-style-type: decimal;}
 ul li, ol li {
   width: 100%;
   max-width: 39rem;
-  padding: 0 0 0.8rem 0.25rem;
+  padding: 0 0 1rem 0.25rem;
 }
 
 ul li:last-child, ol li:last-child {padding: 0 0 0 0.25rem;}
@@ -107,6 +107,7 @@ pre {line-height: 1.2;}
 p > code, li > code {
   font-size: 1rem;
   white-space: nowrap;
+  background-color: $cream;
 }
 
 p > code.other {padding: 0.125rem 0.25rem;}
