--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -102,6 +102,11 @@ figcaption {
   text-transform: uppercase;
 }
 
+figcaption + h1,
+figcaption + h2,
+figcaption + h3,
+figcaption + h1 {padding: 0.25rem 0 0;}
+
 pre {line-height: 1.2;}
 
 p > code, li > code {
