--- a/style/layout/layout.html
+++ b/style/layout/layout.html
@@ -9,6 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
+    <style>
+    .layout-specimens > h2:before {
+      display: block;
+      width: 100%;
+      height: 1px;
+      margin: 0 auto 2rem;
+      background-color: #e4e8ed;
+      content: "";
+    }
+    </style>
   </head>
   <body data-aos="fade-in">
     <header>
@@ -37,15 +47,126 @@
         <ul>
           <li><code>class="row wide"</code> each <code>.column</code> child will span the full width of the browser window.</li>
           <li><code>class="row fifty"</code> each <code>.column</code> child will span 50% of the width of the browser window.</li>
-          <li><code>class="row golden left"</code> the first <code>.column</code> will span 60% of the width of the browser window and the second <code>.column</code> will span 40%.</li>
-          <li><code>class="row golden right"</code> the first <code>.column</code> will span 40% of the width of the browser window and the second <code>.column</code> will span 60%.</li>
+          <li><code>class="row golden left"</code> the first <code>.column</code> will span 62% of the width of the browser window and the second <code>.column</code> will span 38%.</li>
+          <li><code>class="row golden right"</code> the first <code>.column</code> will span 38% of the width of the browser window and the second <code>.column</code> will span 62%.</li>
           <li><code>class="row thirds"</code> each <code>.column</code> child will span approximately 33% of the width of the browser window.</li>
           <li><code>class="row fourths"</code> each <code>.column</code> child will span approximately 50% of the width of the browser window on screens wider than 48rem but smaller than 64rem. On screens wider than 64rem, each <code>.column</code> child will span approximately 25% of the width of the browser window.</li>
         </ul>
+        <p>Each element includes some variation of 1rem padding so that there should always be 2rems of padding around the parent. This padding is designed to play a key role (with <a href="../typography/typography.html">typography</a>) in the carefully considered and consistent vertical and horizontal spacing that is at the heart of the Delta Design System.</p>
+        <p>Just a quick note: the spacing of the "Golden Rows" is based on the <a href="https://en.wikipedia.org/wiki/Golden_ratio" target="_blank">Golden Ratio</a>. There are some methods to the madness here.</p>
+      </section>
+      <section class="layout-specimens row wide">
+        <h1>Layout Specimens</h2>
+        <p>Here are some examples of the Delta Design System layout patterns.</p>
+        <h2>Fifty Row</h2>
+        <div class="row fifty">
+          <div class="column">
+            <h3>Left Column</h3>
+            <p>Columns in a fifty-fifty row occupy 50% of the available width on screens wider than 48rem.</p>
+            <figure style="padding: 0;">
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;row fifty&quot;&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+          <div class="column">
+            <h3>Right Column</h3>
+            <p>Columns in a fifty-fifty row occupy 50% of the available width on screens wider than 48rem.</p>
+          </div>
+        </div>
+        <h2>Golden Left Row</h2>
+        <div class="row golden left">
+          <div class="column">
+            <h3>Left Column</h3>
+            <p>The left column in a golden left row occupies 62% of the available width on screens wider than 48rem.</p>
+            <figure style="padding: 0;">
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;row golden left&quot;&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+          <div class="column">
+            <h3>Right Column</h3>
+            <p>The right column in a golden left row occupies 38% of the available width on screens wider than 48rem.</p>
+          </div>
+        </div>
+        <h2>Golden Right Row</h2>
+        <div class="row golden right">
+          <div class="column">
+            <h3>Left Column</h3>
+            <p>The left column in a golden right row occupies 38% of the available width on screens wider than 48rem.</p>
+            <figure style="padding: 0;">
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;row golden right&quot;&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+          <div class="column">
+            <h3>Right Column</h3>
+            <p>The right column in a golden right row occupies 62% of the available width on screens wider than 48rem.</p>
+          </div>
+        </div>
+        <h2>Thirds Row</h2>
+        <div class="row thirds">
+          <div class="column">
+            <h3>Left Column</h3>
+            <p>The left column in a thirds row occupies 33% of the available width on screens wider than 48rem.</p>
+            <figure style="padding: 0;">
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;row thirds&quot;&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+          <div class="column">
+            <h3>Center Column</h3>
+            <p>The center column in a thirds row occupies 33% of the available width on screens wider than 48rem.</p>
+          </div>
+          <div class="column">
+            <h3>Right Column</h3>
+            <p>The right column in a thirds row occupies 33% of the available width on screens wider than 48rem.</p>
+          </div>
+        </div>
+        <h2>Fourths Row</h2>
+        <div class="row fourths">
+          <div class="column">
+            <h3>First Column</h3>
+          <p>The first column in a fourths row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
+            <figure style="padding: 0;">
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;row fourths&quot;&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;column&quot;&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+          <div class="column">
+            <h3>Second Column</h3>
+            <p>The second column in a fourths row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
+          </div>
+          <div class="column">
+            <h3>Third Column</h3>
+            <p>The right column in a fourths row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
+          </div>
+          <div class="column">
+            <h3>Last Column</h3>
+            <p>The last column in a fourths row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
-      <div class="row golden left">
+      <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
             <li><a href="../../index.html">Overview</a></li>
