--- a/style/layout/layout.html
+++ b/style/layout/layout.html
@@ -56,7 +56,7 @@
         <p>Just a quick note: the spacing of the "Golden Rows" is based on the <a href="https://en.wikipedia.org/wiki/Golden_ratio" target="_blank">Golden Ratio</a>. There are some methods to the madness here.</p>
       </section>
       <section class="layout-specimens row wide">
-        <h1>Layout Specimens</h2>
+        <h1>Layout Specimens</h1>
         <p>Here are some examples of the Delta Design System layout patterns.</p>
         <h2>Fifty Row</h2>
         <div class="row fifty">
@@ -166,6 +166,7 @@
       </section>
     </main>
     <footer>
+      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
           <ul>
