--- a/css/master.css
+++ b/css/master.css
@@ -194,11 +194,7 @@ main > section.row:first-of-type {
   flex-direction: column;
   width: 100%;
   margin: 0;
-  padding: 0;
-  /*
-  .row .column:first-child {padding: 1rem 1rem 1rem 0;}
-  .row .column:last-child {padding: 1rem 0 1rem 1rem;}
-*/ }
+  padding: 0; }
   .row .column {
     width: 100%;
     margin: 0;
