--- a/css/_global/_layout.scss
+++ b/css/_global/_layout.scss
@@ -22,6 +22,7 @@ main > section.row:first-of-type {padding: 0 1rem 1rem;}
     width: 100%;
     margin: 0;
     padding: 1rem;
+    p:first-child {padding: 0 0 0.8rem;}
     figure:last-of-type {padding: 1rem 0 0;}
   }
 }
