--- a/css/master.css
+++ b/css/master.css
@@ -139,6 +139,9 @@ ul, ol {
   line-height: 1.5;
   text-align: left; }
 
+ul:last-child, ol:last-child {
+  padding: 0.8rem 0 0 1.5rem; }
+
 ul {
   list-style-type: disc; }
 
@@ -199,6 +202,8 @@ main > section.row:first-of-type {
     width: 100%;
     margin: 0;
     padding: 1rem; }
+    .row .column p:first-child {
+      padding: 0 0 0.8rem; }
     .row .column figure:last-of-type {
       padding: 1rem 0 0; }
 
@@ -268,6 +273,41 @@ figure {
   .row figure.column,
   .row figure.column:last-child {
     padding: 1rem 0; } }
+
+blockquote {
+  display: block;
+  position: relative;
+  width: 100%;
+  margin: 1rem auto;
+  padding: 1rem;
+  border: 1px solid #e4e8ed; }
+  blockquote p {
+    padding: 0 0 0.8rem;
+    font-weight: 600; }
+    blockquote p cite {
+      font-size: 0.8rem; }
+  blockquote p:last-child {
+    padding: 0; }
+
+blockquote:before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 3rem;
+  height: 3rem;
+  font-family: "Ovo", serif;
+  font-size: 6rem;
+  color: #e4e8ed;
+  line-height: 1.1;
+  text-align: center;
+  background-color: #ffffff;
+  transform: translate(-50%, -60%);
+  content: "\201C"; }
+
+@media (min-width: 64rem) {
+  blockquote {
+    width: 90%; } }
 
 nav {
   width: 100%;
