--- a/style/layout/layout.html
+++ b/style/layout/layout.html
@@ -39,7 +39,7 @@
       </nav>
     </header>
     <main>
-      <section class="introduction row wide">
+      <section class="row wide">
         <h1 class="title">Layout</h1>
         <p>If the goal of content is to be discoverable and easy to absorb, then the layout should not complicate that process. The simplest, most efficient layout model is a <a href="https://techterms.com/definition/fluid_layout" target="_blank">fluid layout</a>.</p>
         <p>Currently, everything in the Delta Design System is built on a truly <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">responsive design</a> system using <a href="https://developer.mozilla.org/en-US/docs/Glossary/Flexbox" target="_blank">flexbox</a>. While the <code>&lt;header&gt;</code> and <code>&lt;footer&gt;</code> and select other items feature their own framework, the content in the <code>&lt;main&gt;</code> section uses a series of nested boxes to create a page layout.</p>
@@ -55,7 +55,7 @@
         <p>Each element includes some variation of 1rem padding so that there should always be 2rems of padding around the parent. This padding is designed to play a key role (with <a href="../typography/typography.html">typography</a>) in the carefully considered and consistent vertical and horizontal spacing that is at the heart of the Delta Design System.</p>
         <p>Just a quick note: the spacing of the "Golden Rows" is based on the <a href="https://en.wikipedia.org/wiki/Golden_ratio" target="_blank">Golden Ratio</a>. There are some methods to the madness here.</p>
       </section>
-      <section class="layout-specimens row wide">
+      <section class="row wide layout-specimens">
         <h1>Layout Specimens</h1>
         <p>Here are some examples of the Delta Design System layout patterns.</p>
         <h2>Fifty Row</h2>
