--- a/css/_atoms/_blockquotes.scss
+++ b/css/_atoms/_blockquotes.scss
@@ -3,7 +3,8 @@ blockquote {
   display: block;
   position: relative;
   width: 100%;
-  margin: 1rem auto;
+  max-width: 41rem;
+  margin: 1rem auto 0;
   padding: 1rem;
   border: 1px solid $lt-gray;
   p {
