--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -78,9 +78,12 @@ ul, ol {
   text-align: left;
 }
 
-ul:last-child, ol:last-child {padding: 0.8rem 0 0 1.5rem;}
-
 ul {list-style-type: disc;}
+
+ul.no-bullets {
+  padding: 0.8rem 0 0.8rem 0;
+  list-style-type: none;
+}
 
 ol {list-style-type: decimal;}
 
