--- a/css/master.css
+++ b/css/master.css
@@ -139,11 +139,12 @@ ul, ol {
   line-height: 1.5;
   text-align: left; }
 
-ul:last-child, ol:last-child {
-  padding: 0.8rem 0 0 1.5rem; }
-
 ul {
   list-style-type: disc; }
+
+ul.no-bullets {
+  padding: 0.8rem 0 0.8rem 0;
+  list-style-type: none; }
 
 ol {
   list-style-type: decimal; }
@@ -204,14 +205,19 @@ main > section.row:first-of-type {
     padding: 1rem; }
     .row .column p:first-child {
       padding: 0 0 0.8rem; }
-    .row .column figure:last-of-type {
-      padding: 1rem 0 0; }
+    .row .column ul:last-child, .row .column ol:last-child {
+      padding: 0.8rem 0 0 1.5rem; }
 
 .row.wide {
+  flex-direction: column;
   width: 100%;
   padding: 1rem; }
   .row.wide .column {
     padding: 1rem 0; }
+  .row.wide ul:last-child, .row.wide ol:last-child {
+    padding: 0.8rem 0 0 1.5rem; }
+  .row.wide ul.no-bullets:last-child {
+    padding: 0.8rem 0 0.8rem 0; }
 
 @media (min-width: 48rem) {
   .row {
@@ -260,7 +266,7 @@ main > section.row:first-of-type {
 figure {
   display: grid;
   margin: 0;
-  padding: 1rem 0; }
+  padding: 0; }
   figure figcaption + p {
     padding: 0 0 0.8rem; }
   figure pre {
@@ -269,16 +275,12 @@ figure {
     padding: 0;
     overflow-x: auto; }
 
-@media (min-width: 48rem) {
-  .row figure.column,
-  .row figure.column:last-child {
-    padding: 1rem 0; } }
-
 blockquote {
   display: block;
   position: relative;
   width: 100%;
-  margin: 1rem auto;
+  max-width: 41rem;
+  margin: 1rem auto 0;
   padding: 1rem;
   border: 1px solid #e4e8ed; }
   blockquote p {
@@ -434,12 +436,15 @@ footer {
   footer nav ul {
     flex-direction: column;
     height: auto;
+    padding: 0;
     transform: translateX(0); }
     footer nav ul li {
       padding: 0 0 1rem;
       text-align: center; }
     footer nav ul li:last-child {
       padding: 0; }
+  footer .row nav.column ul:last-child {
+    padding: 0; }
   footer .logo {
     display: flex;
     flex-direction: column;
