Buttons page added

--- a/css/_global/_layout.scss
+++ b/css/_global/_layout.scss
@@ -43,7 +43,7 @@ main > section.row:first-of-type {padding: 0 1rem 1rem;}
     flex-wrap: wrap;
   }
   .row.wide {
-    .column {width: 100%}
+    .column {width: 100%;}
   }
   .row.golden.left {
     .column {width: 61.8%;}
