Images page added
Other minor updates included

--- a/style/layout/layout.html
+++ b/style/layout/layout.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
     <style>
-    .layout-specimens > h2:before {
+    .layout-examples > h2:before {
       display: block;
       width: 100%;
       height: 1px;
@@ -55,8 +55,8 @@
         <p>Each element includes some variation of 1rem padding so that there should always be 2rems of padding around the parent. This padding is designed to play a key role (with <a href="../typography/typography.html">typography</a>) in the carefully considered and consistent vertical and horizontal spacing that is at the heart of the Delta Design System.</p>
         <p>Just a quick note: the spacing of the "Golden Rows" is based on the <a href="https://en.wikipedia.org/wiki/Golden_ratio" target="_blank">Golden Ratio</a>. There are some methods to the madness here.</p>
       </section>
-      <section class="row wide layout-specimens">
-        <h1>Layout Specimens</h1>
+      <section class="row wide layout-examples">
+        <h1>Layout Examples</h1>
         <p>Here are some examples of the Delta Design System layout patterns.</p>
         <h2>Fifty Row</h2>
         <div class="row fifty">
