Component name updates; footer:before update
Removed unnecessary image style sheet; changed form page to form-atoms; updated width for footer:before rule to 100%.

--- a/css/master.scss
+++ b/css/master.scss
@@ -5,8 +5,7 @@
 @import "_atoms/buttons";
 @import "_atoms/alerts";
 @import "_atoms/blockquotes";
-@import "_atoms/images";
-@import "_atoms/form-elements";
+@import "_atoms/form-atoms";
 
 @import "_molecules/navigation";
 @import "_molecules/banners";
