--- a/css/_organisms/_footers.scss
+++ b/css/_organisms/_footers.scss
@@ -63,7 +63,7 @@ footer {
 
 footer:before {
   display: block;
-  width: calc(100% - 2rem);
+  width: 100%;
   height: 1px;
   margin: 1rem auto;
   background-color: $dk-gray;
