--- a/css/master.css
+++ b/css/master.css
@@ -574,7 +574,7 @@ footer {
 
 footer:before {
   display: block;
-  width: calc(100% - 2rem);
+  width: 100%;
   height: 1px;
   margin: 1rem auto;
   background-color: #5b5e6b;
