--- a/css/_organisms/_footers.scss
+++ b/css/_organisms/_footers.scss
@@ -63,7 +63,7 @@ footer {
 
 footer:before {
   display: block;
-  width: 100%;
+  width: calc(100% - 2rem);
   height: 1px;
   margin: 1rem auto;
   background-color: $dk-gray;
@@ -83,4 +83,5 @@ footer:before {
       p {text-align: left;}
     }
   }
+  footer:before {width: 100%;}
 }
