--- a/css/_atoms/_buttons.scss
+++ b/css/_atoms/_buttons.scss
@@ -17,7 +17,7 @@ button, .button {
   text-align: center;
   text-decoration: none;
   text-overflow: ellipsis;
-  text-transform: uppercase;
+  text-transform: capitalize;
   color: $white;
   background-color: $primary;
   white-space: nowrap;
