--- a/css/_atoms/_form-atoms.scss
+++ b/css/_atoms/_form-atoms.scss
@@ -6,6 +6,8 @@ FORM ELEMENTS
   select
   checkbox
   radio button
+  toggle switches
+  buttons
   error message
   password
   show-hide password
@@ -55,7 +57,10 @@ fieldset {
   border-radius: 0.25rem;
 }
 
-fieldset.checkbox {
+fieldset.checkbox,
+fieldset.radio,
+fieldset.toggle,
+fieldset.button-input {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -171,6 +176,7 @@ select:focus + label {
 
 // CHECKBOX
 label.checkbox {
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -265,6 +271,103 @@ input[type="radio"]:checked:before {
   border-radius: 100%;
   background-color: $secondary;
   content: "";
+}
+
+
+// TOGGLE SWITCHES
+label.toggle {
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  z-index: 10;
+  margin: 0.8rem 0;
+  width: fit-content;
+  min-height: 1.25rem;
+  padding: 0 0 0 3.5rem;
+  cursor: pointer;
+}
+
+input.toggle[type="checkbox"] {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0.125rem;
+  width: 2.75rem;
+  height: 1.25rem;
+  max-height: 1.25rem;
+  min-height: inherit;
+  margin: 0;
+  border: 1px solid $black;
+  border-radius: 2rem;
+  background-color: $white;
+  cursor: pointer;
+  @include appearance(none);
+  @include transition(all, 0.25s, ease);
+}
+
+input.toggle[type="checkbox"]:checked:before {display: none;}
+
+input.toggle[type="checkbox"]:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  background-image: url(../assets/icons/close-circle-fill.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+  @include transition(all, 0.25s, ease);
+}
+
+input.toggle[type="checkbox"]:checked:after {
+  left: calc(100% - 1.125rem);
+  background-image: url(../assets/icons/checkbox-circle-fill.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+}
+
+
+// BUTTONS
+input[type="button"] {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  max-width: 100%;
+  height: 2.5rem;
+  max-height: 2.5rem;
+  min-height: inherit;
+  overflow: hidden;
+  margin: 0;
+  padding: 0.75rem 1.25rem;
+  border: 1px solid $primary;
+  border-radius: 0.25rem;
+  font-family: $font-body;
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 1;
+  text-align: center;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  text-transform: capitalize;
+  color: $white;
+  background-color: $primary;
+  white-space: nowrap;
+  cursor: pointer;
+  @include transition(all, 0.25s, ease);
+}
+
+input[type="button"]:hover, input[type="button"]:focus {
+  color: $primary;
+  background-color: $white;
 }
 
 
