--- a/css/master.css
+++ b/css/master.css
@@ -293,7 +293,7 @@ button, .button {
   text-align: center;
   text-decoration: none;
   text-overflow: ellipsis;
-  text-transform: uppercase;
+  text-transform: capitalize;
   color: #ffffff;
   background-color: #df3a32;
   white-space: nowrap;
@@ -405,6 +405,8 @@ FORM ELEMENTS
   select
   checkbox
   radio button
+  toggle switches
+  buttons
   error message
   password
   show-hide password
@@ -452,7 +454,10 @@ fieldset {
   border: 1px solid #5b5e6b;
   border-radius: 0.25rem; }
 
-fieldset.checkbox {
+fieldset.checkbox,
+fieldset.radio,
+fieldset.toggle,
+fieldset.button-input {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -580,6 +585,7 @@ select:focus + label {
   transform: translate(0, -2.5rem); }
 
 label.checkbox {
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -678,6 +684,108 @@ input[type="radio"]:checked:before {
   border-radius: 100%;
   background-color: #003442;
   content: ""; }
+
+label.toggle {
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  z-index: 10;
+  margin: 0.8rem 0;
+  width: fit-content;
+  min-height: 1.25rem;
+  padding: 0 0 0 3.5rem;
+  cursor: pointer; }
+
+input.toggle[type="checkbox"] {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0.125rem;
+  width: 2.75rem;
+  height: 1.25rem;
+  max-height: 1.25rem;
+  min-height: inherit;
+  margin: 0;
+  border: 1px solid #000000;
+  border-radius: 2rem;
+  background-color: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s; }
+
+input.toggle[type="checkbox"]:checked:before {
+  display: none; }
+
+input.toggle[type="checkbox"]:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  background-image: url(../assets/icons/close-circle-fill.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s; }
+
+input.toggle[type="checkbox"]:checked:after {
+  left: calc(100% - 1.125rem);
+  background-image: url(../assets/icons/checkbox-circle-fill.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: ""; }
+
+input[type="button"] {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  max-width: 100%;
+  height: 2.5rem;
+  max-height: 2.5rem;
+  min-height: inherit;
+  overflow: hidden;
+  margin: 0;
+  padding: 0.75rem 1.25rem;
+  border: 1px solid #df3a32;
+  border-radius: 0.25rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 1;
+  text-align: center;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  text-transform: capitalize;
+  color: #ffffff;
+  background-color: #df3a32;
+  white-space: nowrap;
+  cursor: pointer;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s; }
+
+input[type="button"]:hover, input[type="button"]:focus {
+  color: #df3a32;
+  background-color: #ffffff; }
 
 span.error-message {
   position: absolute;
@@ -796,6 +904,75 @@ nav.open ul {
         padding: 0 2rem 0 0; }
     nav ul li:last-child {
       padding: 0; } }
+
+.card-row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 1rem 0 0; }
+  .card-row .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 1rem 0;
+    padding: 0;
+    border: 1px solid #e4e8ed;
+    border-radius: 0.25rem; }
+    .card-row .card figure img {
+      border-radius: 0.25rem 0.25rem 0 0; }
+    .card-row .card .text {
+      padding: 1rem; }
+      .card-row .card .text p a {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start; }
+        .card-row .card .text p a span {
+          display: flex;
+          flex-direction: column;
+          justify-content: center; }
+          .card-row .card .text p a span svg {
+            width: 1.25rem;
+            height: 1.25rem;
+            margin: 0 0 0 0.25rem;
+            fill: #df3a32;
+            -webkit-transition: all 0.25s ease 0s;
+            -moz-transition: all 0.25s ease 0s;
+            -ms-transition: all 0.25s ease 0s;
+            -o-transition: all 0.25s ease 0s;
+            transition: all 0.25s ease 0s; }
+    .card-row .card .text p a:hover span svg,
+    .card-row .card .text p a:focus span svg {
+      margin: 0 0 0 0.5rem;
+      fill: #003442; }
+
+@media (min-width: 48rem) {
+  .card-row {
+    flex-direction: row;
+    align-items: stretch;
+    flex-wrap: wrap;
+    justify-content: center; }
+    .card-row .card {
+      width: calc(50% - 1rem); }
+    .card-row .card:nth-of-type(odd) {
+      margin: 1rem 1rem 1rem 0; }
+    .card-row .card:nth-of-type(even) {
+      margin: 1rem 0 1rem 1rem; }
+    .card-row .card:last-child {
+      margin: 1rem 0; } }
+
+@media (min-width: 64rem) {
+  .card-row .card {
+    width: calc(32.75% - 1rem); }
+  .card-row .card:nth-of-type(odd) {
+    margin: 1rem 1rem 1rem 0; }
+  .card-row .card:nth-of-type(even) {
+    margin: 1rem; }
+  .card-row .card:last-child {
+    margin: 1rem 0 1rem 1rem; } }
 
 header {
   display: flex;
